{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 29,
  "lineage": "a8601ffa-f0bb-d363-b494-f8bad50e0ba0",
  "resources": [
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098143f68772b34f5",
            "arn": "arn:aws:ec2:us-east-1:655848829540:instance/i-081c01ce3fbd82665",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm_instance_profile",
            "id": "i-081c01ce3fbd82665",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d2f39ca4d48a596d",
            "private_dns": "ip-10-30-2-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.2.48",
            "public_dns": "ec2-44-202-248-17.compute-1.amazonaws.com",
            "public_ip": "44.202.248.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f349695383736c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a4b3d916f2e37d5",
            "tags": {
              "Name": "atlas-dev",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-09-26T03:47:25Z",
              "creator": "gefter.chongong@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_TS-Team.PowerUser-Limited-IAM_e51045f99ce56ba4"
            },
            "tags_all": {
              "Name": "atlas-dev",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-09-26T03:47:25Z",
              "creator": "gefter.chongong@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_TS-Team.PowerUser-Limited-IAM_e51045f99ce56ba4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0837c35323873513a"
            ]
          },
          "dependencies": [
            "module.app-dev.aws_iam_instance_profile.ec2_ssm_instance_profile",
            "module.app-dev.aws_security_group.primary_default",
            "module.app-dev.aws_subnet.primary-az1",
            "module.app-dev.data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655848829540:internet-gateway/igw-099b6bf84b2189ecc",
            "id": "igw-099b6bf84b2189ecc",
            "owner_id": "655848829540",
            "vpc_id": "vpc-04732f1ddb15b6a69"
          },
          "dependencies": [
            "module.app-dev.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "primary-internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-099b6bf84b2189ecc",
            "id": "r-rtb-0e6245a961482147c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6245a961482147c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-dev.aws_internet_gateway.primary",
            "module.app-dev.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655848829540:security-group/sg-0837c35323873513a",
            "description": "Default security group for all instances in vpc-04732f1ddb15b6a69",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0837c35323873513a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default-20230926030427331700000001",
            "name_prefix": "default-",
            "owner_id": "655848829540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04732f1ddb15b6a69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-dev.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655848829540:subnet/subnet-03a4b3d916f2e37d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a4b3d916f2e37d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655848829540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04732f1ddb15b6a69"
          },
          "dependencies": [
            "module.app-dev.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655848829540:subnet/subnet-059b9bf84e91136b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b9bf84e91136b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655848829540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04732f1ddb15b6a69"
          },
          "dependencies": [
            "module.app-dev.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655848829540:vpc/vpc-04732f1ddb15b6a69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0c6fce0fc56a92900",
            "default_route_table_id": "rtb-0e6245a961482147c",
            "default_security_group_id": "sg-033389edefb407414",
            "dhcp_options_id": "dopt-51fa002b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04732f1ddb15b6a69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6245a961482147c",
            "owner_id": "655848829540"
          }
        }
      ]
    },
    {
      "module": "module.app-dev",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ptfe_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655848829540:vpc-endpoint/vpce-03c1c1ffd94fe9515",
            "dns_entry": [
              {
                "dns_name": "vpce-03c1c1ffd94fe9515-8o0qatwt.vpce-svc-0d5652cf1e30b074c.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03c1c1ffd94fe9515-8o0qatwt-us-east-1b.vpce-svc-0d5652cf1e30b074c.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03c1c1ffd94fe9515-8o0qatwt-us-east-1a.vpce-svc-0d5652cf1e30b074c.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03c1c1ffd94fe9515",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03493a91ac09861d7",
              "eni-0c8c3987fec73c782"
            ],
            "owner_id": "655848829540",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0837c35323873513a"
            ],
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0d5652cf1e30b074c",
            "state": "available",
            "subnet_ids": [
              "subnet-03a4b3d916f2e37d5",
              "subnet-059b9bf84e91136b5"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04732f1ddb15b6a69"
          },
          "dependencies": [
            "module.app-dev.aws_security_group.primary_default",
            "module.app-dev.aws_subnet.primary-az1",
            "module.app-dev.aws_subnet.primary-az2",
            "module.app-dev.aws_vpc.primary",
            "module.app-dev.mongodbatlas_privatelink_endpoint.atlaspl"
          ]
        }
      ]
    }
  ]
}